[tool.poetry]
name = "scxa-kg-api"
version = "0.1.0"
description = "API for SCXA KG"
authors = ["Anita Caron"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
neo4j = "^5.23.1"
pydantic-settings = "^2.4.0"